--- a/pom.xml
+++ b/pom.xml
@@ -1,136 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
 
     <modelVersion>4.0.0</modelVersion>
 
 
     <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.1.RELEASE</version>
+        <relativePath/>
+    </parent>
 
-    <groupId>org.springframework.boot</groupId>
-
-    <artifactId>spring-boot-starter-parent</artifactId>
-
-    <version>2.2.0.RELEASE</version>
-
-    <relativePath/>
-
-    <!-- lookup parent from repository -->
-
-
-</parent>
-
-    <groupId>com.example</groupId>
-
+    <groupId>com.java</groupId>
     <artifactId>Yoink</artifactId>
-
     <version>0.0.1-SNAPSHOT</version>
-
     <name>multi-module-library</name>
-
     <description>TriHard</description>
 
-
     <properties>
-
-    <java.version>1.8</java.version>
-
-</properties>
+        <java.version>1.8</java.version>
+    </properties>
 
     <dependencies>
-
-
-
-    <dependency>
-
-    <groupId>org.mybatis.spring.boot</groupId>
-
-    <artifactId>mybatis-spring-boot-starter</artifactId>
-
-    <version>2.1.3</version>
-
-</dependency>
-
-
-
-
-
-    <dependency>
-
-    <groupId>org.springframework.boot</groupId>
-
-    <artifactId>spring-boot-starter-data-rest</artifactId>
-
-</dependency>
-
-
-    <dependency>
-
-    <groupId>org.springframework.boot</groupId>
-
-    <artifactId>spring-boot-starter</artifactId>
-
-</dependency>
-
-
-    <dependency>
-
-    <groupId>org.springframework.boot</groupId>
-
-    <artifactId>spring-boot-starter-test</artifactId>
-
-    <scope>test</scope>
-
-
-    <exclusions>
-
-
-    <exclusion>
-
-    <groupId>org.junit.vintage</groupId>
-
-    <artifactId>junit-vintage-engine</artifactId>
-
-</exclusion>
-
-</exclusions>
-
-</dependency>
-
-
-    <dependency>
-
-    <groupId>org.springframework.boot</groupId>
-
-    <artifactId>spring-boot</artifactId>
-
-    <version>2.2.0.RELEASE</version>
-
-</dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.21</version> <!-- or use LATEST -->
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.21</version> <!-- or use LATEST -->
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-aop</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <artifactId>spring-beans</artifactId>
+            <version>5.2.7.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.3.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.3.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.2.7.RELEASE</version>
+        </dependency>
     </dependencies>
 
 
     <build>
-
-
-    <plugins>
-
-
-    <plugin>
-
-    <groupId>org.springframework.boot</groupId>
-
-    <artifactId>spring-boot-maven-plugin</artifactId>
-
-</plugin>
-
-</plugins>
-
-</build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
