--- a/src/com/java/resources/application.properties
+++ b/src/com/java/resources/application.properties
@@ -3,7 +3,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=upate
 server.ssl.enabled=false
+
 spring.datasource.driver = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://database-1.coaeroq78uw6.eu-central-1.rds.amazonaws.com:3306/yoinkName?useSSL=false
-spring.datasource.username = admin
-spring.datasource.password = mjaso3000
+spring.datasource.url = jdbc:mysql://localhost:3306/gay?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+//spring.datasource.username = root
+spring.datasource.password =Mjaso3000.@
