--- a/src/com/java/resources/application.properties
+++ b/src/com/java/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.driver = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/gay?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 //spring.datasource.username = root
 spring.datasource.password =Mjaso3000.@
+
+security.basic.enabled=false
+spring.queries.users-query=select email, password, '1' as enabled from registred_user where email=?
+
