--- a/src/com/java/application.properties
+++ b/src/com/java/application.properties
@@ -4,6 +4,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=upate
 server.ssl.enabled=false
 
+spring.mvc.view.prefix = /WEB-INF/views/
+spring.mvc.view.suffix = .jsp
+
 spring.datasource.driver = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/gay?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 //spring.datasource.username = root
