--- a/src/com/java/WEB-INF/web.xml
+++ b/src/com/java/WEB-INF/web.xml
@@ -8,9 +8,11 @@
     <servlet>
         <servlet-name>spring-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
         <servlet-name>spring-dispatcher</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/localhost:8080/*</url-pattern>
     </servlet-mapping>
+    </web-app>
