--- a/src/com/java/application.properties
+++ b/src/com/java/application.properties
@@ -6,6 +6,7 @@ server.ssl.enabled=false
 
 spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
+spring.data.rest.base-path=/api
 
 spring.datasource.driver = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/gay?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
